<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskDetail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="Task Title" />

            <EditText
                android:id="@+id/ed_TaskTitle"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Title Name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none|textPersonName"
            android:text="Task Description" />

        <EditText
            android:id="@+id/ed_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="sentences"
            android:ems="10"
            android:inputType="textPersonName"
            android:singleLine="false"
            android:visibility="visible" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="66dp"
                android:layout_height="29dp"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="@string/taskRate" />

            <EditText
                android:id="@+id/taskRate"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Task Rate"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:ems="10"
                android:inputType="none|textPersonName"
                android:text="@string/taskType"
                android:textAlignment="textEnd" />

            <Spinner
                android:id="@+id/taskType"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:entries="@array/taskTypeArray"
                android:inputType="textPersonName" />

        </LinearLayout>
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="none|textPersonName"
            android:text="@string/Category"
            android:textAlignment="textEnd" />

        <Spinner
            android:id="@+id/taskCategory"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:entries="@array/taskCategoryArray"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SaveButton_OnClick"
            android:text="Save" />
        <Button
            android:id="@+id/bt_uploadPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SaveButton_OnClick"
            android:text="UploadPicture" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>